# sparky

./: .gitignore  Cargo.toml  README.md  config.example.toml  rust-toolchain.toml
crates/spark-api/: Cargo.toml
crates/spark-api/src/: lib.rs
crates/spark-api/src/middleware/: auth.rs
crates/spark-api/src/routes/: containers.rs  mod.rs  models.rs  system.rs
crates/spark-console/: Cargo.toml
crates/spark-console/src/: main.rs
crates/spark-providers/: Cargo.toml
crates/spark-providers/src/: cpu.rs  disk.rs  docker.rs  gpu.rs  lib.rs  memory.rs  models.rs  uptime.rs
crates/spark-types/: Cargo.toml
crates/spark-types/src/: lib.rs  system.rs
crates/spark-ui/: Cargo.toml
crates/spark-ui/src/: app.rs  lib.rs
crates/spark-ui/src/components/: gauge.rs  metric_card.rs  mod.rs  nav.rs  toast.rs
crates/spark-ui/src/pages/: containers.rs  dashboard.rs  login.rs  mod.rs  models.rs
deploy/: deploy.sh  spark-console.service
style/: main.css
