[package]
name = "spark-console"
version = "0.1.0"
edition = "2021"

[dependencies]
spark-types = { path = "../spark-types" }
spark-api = { path = "../spark-api", optional = true }
spark-ui = { path = "../spark-ui" }
spark-providers = { path = "../spark-providers", optional = true }
leptos = { workspace = true }
leptos_axum = { workspace = true, optional = true }
axum = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
tower = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true }
toml = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }
http = { workspace = true, optional = true }

[features]
default = []
ssr = [
    "spark-ui/ssr",
    "dep:spark-api",
    "dep:spark-providers",
    "dep:leptos_axum",
    "dep:axum",
    "dep:tokio",
    "dep:tower",
    "dep:tower-http",
    "dep:toml",
    "dep:serde_json",
    "dep:tracing",
    "dep:tracing-subscriber",
    "dep:http",
]
