[package]
name = "spark-ui"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
spark-types = { path = "../spark-types" }
spark-providers = { path = "../spark-providers", optional = true }
leptos = { workspace = true }
leptos_meta = { workspace = true }
leptos_router = { workspace = true }
leptos_axum = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
http = { workspace = true, optional = true }
toml = { workspace = true, optional = true }
wasm-bindgen = { workspace = true }
console_error_panic_hook = { workspace = true }

[features]
default = []
hydrate = [
    "leptos/hydrate",
]
ssr = [
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "dep:leptos_axum",
    "dep:spark-providers",
    "dep:http",
    "dep:toml",
]
